# FormOCR

./: .env.local.example  .gitignore  New Text Document.txt  README.md  README.mdgit  package-lock.json  package.json
apps/api/: build.spec  requirements-ocr.txt  requirements.txt  run.py
apps/api/app/: config.py  main.py
apps/api/app/db/: migrate.py  models.py  session.py
apps/api/app/routers/: export.py  form_types.py  forms.py  health.py  process.py  settings_router.py  templates.py
apps/api/app/schemas/: __init__.py  common.py  field_types.py
apps/api/app/services/: ai_correct.py  extract.py  field_crop.py  field_styles.py  (+13 more)
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: prepare-app-icon.py  sync-public-icons.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  window_chrome.rs
assets/: README.md  manifest.json
scripts/: FormOCR-Setup.cmd  FormOCR-installer.iss  build-api.ps1  build-installer.ps1  build-offline-installer.ps1  bundle-ollama.ps1  dev.ps1  first-run-ollama.ps1  install-formocr.ps1  lib-formocr.ps1  migrate-paddle-models.ps1  patch-installed-api.ps1  patch-ollama-models.ps1  populate-assets.ps1  prepare-installer-assets.ps1  refresh-offline-api.ps1  setup-offline.ps1  start-ollama.ps1  stop-formocr-api.ps1  stop-formocr-sidecars.ps1  test-pipeline.ps1
shared/schemas/: template.json
(+39 files in other folders)
